crates/runtime/src/tests/snapshots/query_describe_database.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"DESCRIBE DATABASE desc_demo;\""
snapshot_kind: text
---
(
    Err(
        SQL(
            ParserError(
                "Expected end of statement, found: desc_demo",
            ),
            None,
        ),
    ),
    Err(
        SQL(
            ParserError(
                "Expected end of statement, found: desc_demo",
            ),
            None,
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
