crates/runtime/src/tests/snapshots/query_describe_warehouse.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"DESCRIBE WAREHOUSE temporary_warehouse;\""
snapshot_kind: text
---
(
    Err(
        SQL(
            ParserError(
                "Expected end of statement, found: temporary_warehouse",
            ),
            None,
        ),
    ),
    Err(
        SQL(
            ParserError(
                "Expected end of statement, found: temporary_warehouse",
            ),
            None,
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
