crates/runtime/src/tests/snapshots/query_from_at.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT *\n    FROM sales AT(OFFSET => -86400);\""
snapshot_kind: text
---
(
    Err(
        SQL(
            ParserError(
                "Expected: ), found: =>",
            ),
            None,
        ),
    ),
    Err(
        SQL(
            ParserError(
                "Expected: ), found: =>",
            ),
            None,
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
