crates/runtime/src/tests/snapshots/query_from_at_timestamp.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT * FROM tt1 at(TIMESTAMP => '2024-06-05 15:29:00'::TIMESTAMP_LTZ);\""
snapshot_kind: text
---
(
    Err(
        SQL(
            ParserError(
                "Expected: ), found: =>",
            ),
            None,
        ),
    ),
    Err(
        SQL(
            ParserError(
                "Expected: ), found: =>",
            ),
            None,
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
