crates/runtime/src/tests/snapshots/query_from_emptysample.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT * FROM testtable SAMPLE ROW (0);\""
snapshot_kind: text
---
(
    Err(
        SQL(
            ParserError(
                "Expected end of statement, found: ROW",
            ),
            None,
        ),
    ),
    Err(
        SQL(
            ParserError(
                "Expected end of statement, found: ROW",
            ),
            None,
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
