crates/runtime/src/tests/snapshots/query_from_inline_view.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT v.profit \n    FROM (SELECT retail_price - wholesale_cost AS profit FROM ftable1) AS v;\""
snapshot_kind: text
---
(
    Ok(
        Statement(
            Query(
                Query {
                    with: None,
                    body: Select(
                        Select {
                            select_token: TokenWithSpan {
                                token: Word(
                                    Word {
                                        value: "SELECT",
                                        quote_style: None,
                                        keyword: SELECT,
                                    },
                                ),
                                span: Span(Location(0,0)..Location(0,0)),
                            },
                            distinct: None,
                            top: None,
                            top_before_distinct: false,
                            projection: [
                                UnnamedExpr(
                                    CompoundIdentifier(
                                        [
                                            Ident {
                                                value: "v",
                                                quote_style: None,
                                                span: Span(Location(0,0)..Location(0,0)),
                                            },
                                            Ident {
                                                value: "profit",
                                                quote_style: None,
                                                span: Span(Location(0,0)..Location(0,0)),
                                            },
                                        ],
                                    ),
                                ),
                            ],
                            into: None,
                            from: [
                                TableWithJoins {
                                    relation: Derived {
                                        lateral: false,
                                        subquery: Query {
                                            with: None,
                                            body: Select(
                                                Select {
                                                    select_token: TokenWithSpan {
                                                        token: Word(
                                                            Word {
                                                                value: "SELECT",
                                                                quote_style: None,
                                                                keyword: SELECT,
                                                            },
                                                        ),
                                                        span: Span(Location(0,0)..Location(0,0)),
                                                    },
                                                    distinct: None,
                                                    top: None,
                                                    top_before_distinct: false,
                                                    projection: [
                                                        ExprWithAlias {
                                                            expr: BinaryOp {
                                                                left: Identifier(
                                                                    Ident {
                                                                        value: "retail_price",
                                                                        quote_style: None,
                                                                        span: Span(Location(0,0)..Location(0,0)),
                                                                    },
                                                                ),
                                                                op: Minus,
                                                                right: Identifier(
                                                                    Ident {
                                                                        value: "wholesale_cost",
                                                                        quote_style: None,
                                                                        span: Span(Location(0,0)..Location(0,0)),
                                                                    },
                                                                ),
                                                            },
                                                            alias: Ident {
                                                                value: "profit",
                                                                quote_style: None,
                                                                span: Span(Location(0,0)..Location(0,0)),
                                                            },
                                                        },
                                                    ],
                                                    into: None,
                                                    from: [
                                                        TableWithJoins {
                                                            relation: Table {
                                                                name: ObjectName(
                                                                    [
                                                                        Ident {
                                                                            value: "ftable1",
                                                                            quote_style: None,
                                                                            span: Span(Location(0,0)..Location(0,0)),
                                                                        },
                                                                    ],
                                                                ),
                                                                alias: None,
                                                                args: None,
                                                                with_hints: [],
                                                                version: None,
                                                                with_ordinality: false,
                                                                partitions: [],
                                                                json_path: None,
                                                            },
                                                            joins: [],
                                                        },
                                                    ],
                                                    lateral_views: [],
                                                    prewhere: None,
                                                    selection: None,
                                                    group_by: Expressions(
                                                        [],
                                                        [],
                                                    ),
                                                    cluster_by: [],
                                                    distribute_by: [],
                                                    sort_by: [],
                                                    having: None,
                                                    named_window: [],
                                                    qualify: None,
                                                    window_before_qualify: false,
                                                    value_table_mode: None,
                                                    connect_by: None,
                                                },
                                            ),
                                            order_by: None,
                                            limit: None,
                                            limit_by: [],
                                            offset: None,
                                            fetch: None,
                                            locks: [],
                                            for_clause: None,
                                            settings: None,
                                            format_clause: None,
                                        },
                                        alias: Some(
                                            TableAlias {
                                                name: Ident {
                                                    value: "v",
                                                    quote_style: None,
                                                    span: Span(Location(0,0)..Location(0,0)),
                                                },
                                                columns: [],
                                            },
                                        ),
                                    },
                                    joins: [],
                                },
                            ],
                            lateral_views: [],
                            prewhere: None,
                            selection: None,
                            group_by: Expressions(
                                [],
                                [],
                            ),
                            cluster_by: [],
                            distribute_by: [],
                            sort_by: [],
                            having: None,
                            named_window: [],
                            qualify: None,
                            window_before_qualify: false,
                            value_table_mode: None,
                            connect_by: None,
                        },
                    ),
                    order_by: None,
                    limit: None,
                    limit_by: [],
                    offset: None,
                    fetch: None,
                    locks: [],
                    for_clause: None,
                    settings: None,
                    format_clause: None,
                },
            ),
        ),
    ),
    Ok(
        [
            "Projection: v.profit",
            "  SubqueryAlias: v",
            "    Projection: ftable1.retail_price - ftable1.wholesale_cost AS profit",
            "      TableScan: ftable1",
        ],
    ),
    Ok(
        [
            "+--------+",
            "| profit |",
            "+--------+",
            "| 8.0    |",
            "+--------+",
        ],
    ),
)
