crates/runtime/src/tests/snapshots/query_from_sample.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT *\n    FROM sales SAMPLE(10);\""
snapshot_kind: text
---
(
    Err(
        SQL(
            ParserError(
                "Expected: identifier, found: 10",
            ),
            None,
        ),
    ),
    Err(
        SQL(
            ParserError(
                "Expected: identifier, found: 10",
            ),
            None,
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
