crates/runtime/src/tests/snapshots/query_from_sample_block.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT * FROM testtable SAMPLE BLOCK (0.012) REPEATABLE (99992);\""
snapshot_kind: text
---
(
    Err(
        SQL(
            ParserError(
                "Expected end of statement, found: BLOCK",
            ),
            None,
        ),
    ),
    Err(
        SQL(
            ParserError(
                "Expected end of statement, found: BLOCK",
            ),
            None,
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
