crates/runtime/src/tests/snapshots/query_from_sample_fixed.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT * FROM testtable SAMPLE (10 ROWS);\""
snapshot_kind: text
---
(
    Err(
        SQL(
            ParserError(
                "Expected: identifier, found: 10",
            ),
            None,
        ),
    ),
    Err(
        SQL(
            ParserError(
                "Expected: identifier, found: 10",
            ),
            None,
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
